# bevy_twin_stick

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: basic.rs  pause.rs
src/: actors.rs  camera.rs  lib.rs  meta_states.rs  player.rs  projectile.rs  stats.rs  transform2d_mods.rs  utils.rs  weapons.rs
src/ai/: keyboard.rs  mod.rs  tracking.rs  wander.rs
