[package]
name = "bevy_twin_stick"
version = "0.2.0"
authors = ["game", "game-logic", "bevy", "framework"]
edition = "2021"
readme = "README.md"


[dependencies]
bevy = {version = "0.12"}
bevy_rapier2d = "0.23"
# bevy_mod_transform2d = { git = "https://github.com/Zellenon/bevy_mod_transform2d.git", features = ["bevy_rapier2d"] }
bevy_mod_transform2d = "0.6"
bevy_turborand = "0.7"
