[package]
name = "bevy_twin_stick"
version = "0.3.0"
authors = ["game", "game-logic", "bevy", "framework"]
edition = "2021"
readme = "README.md"


[dependencies]
bevy = {version = "0.14"}
bevy_rapier2d = "0.27"
bevy_mod_transform2d = { git = "https://github.com/Zellenon/bevy_mod_transform2d.git", features = ["rapier"] }
bevy_turborand = "0.9"

[dev-dependencies]
bevy-inspector-egui = "0.25"
